# CRUDE

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  RELEASING.md  data.json  data_schema.json  pyproject.toml
.github/workflows/: workflow.yml
crude/: __init__.py  core.py
examples/: demo.py  demo_legacy.py
tests/: test_crude.py
