[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crude-engine"
dynamic = ["version"]
description = "JSON-backed CRUD helper with schema validation and execution engine"
authors = [
    { name="Axander Kevin Arslan Sinsustra" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
keywords = ["crud", "json", "schema", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "twine>=5.0.0",
    "ruff>=0.5.0",
]

[project.urls]
"Homepage" = "https://github.com/tumbalcain/CRUDE"
"Repository" = "https://github.com/tumbalcain/CRUDE"
"Issues" = "https://github.com/tumbalcain/CRUDE/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["crude*"]
exclude = ["tests*", "test*", "examples*"]

[tool.setuptools.package-data]
crude = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "crude-engine.__version__" }

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
